# parts-walking-information-storage-server

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
create_insert_sql/: insert_position.sql  main.py
create_insert_sql/config/: coordinate.py
