[project]
name = "parts-walking-information-storage-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ulid-py>=1.1.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "D415", # first line should end with a period
    "D400", # first line should end with a period
    "RUF001", # invalid ruff tag
    "ISC001", # invalid issue tag
    "COM812", # missing space after comment hash
    "S608", # invalid variable name
    "INP001", # invalid input name
    "T201", # invalid type name
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.pylint]
max-args = 4
